.dev/scss/components/block/_spacer.scss
.wp-block-spacer {

    height: 0 !important;box-sizing: content-box;

    &:not([class*="is-style"]) {
        padding-top: $spacer;
        @include media-breakpoint-up(md) {
            padding-top: $spacer*3;
        }
    }
    &.is-style-sm,&.is-style-default {
        padding-top: $spacer;
    }
    &.is-style-md {
        padding-top: $spacer;
        @include media-breakpoint-up(md) {
            padding-top: $spacer*2;
        }
    }
    &.is-style-lg {
        padding-top: $spacer;
        @include media-breakpoint-between(md, lg) {
            padding-top: $spacer*3;
        }
        @include media-breakpoint-up(xl) {
            padding-top: $spacer*4;
        }
    }
    &.is-style-xl {
        padding-top: $spacer;
        @include media-breakpoint-between(md, lg) {
            padding-top: $spacer*4;
        }
        @include media-breakpoint-up(xl) {
            padding-top: $spacer*6;
        }
    }
}

.is-root-container {
    .wp-block-spacer {
        background: repeating-linear-gradient(
                        45deg,
                        white,
                        white 10px,
                        rgba(black, .2) 10px,
                        rgba(black, .2) 11px
        )
    }
}

